window can be dragged around

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="floating_window" id="floating_window_about">
-        <div class="window_header">
+        <div class="window_header" id="window_header">
             <div class="window_title" id="window_title">About</div>
             <div class="window_options"><button class="close_window" onclick="close_window('about')">&times;</button></div>
         </div>
