new file:   blog.html 	new file:   img/music.png 	modified:   index.html 	new file:   music.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
     <div class="desktop">
         <div class="icon"><img src="img/about.png" onclick="open_window('about')"><label>about</label></div>
+        <div class="icon"><img src="img/music.png" onclick="open_window('music')"><label>music</label></div>
     </div>
 </body>
 <script src="script.js"></script>
