modified:   music.html

--- a/music.html
+++ b/music.html
@@ -10,7 +10,7 @@
     <h1>My Music</h1>
     <hr>
     <p>Since I first picked up my guitar at 2019, I have been playing music until now. I play both electric and acoustic guitars, and play basic level of cajon and bass as well.</p>
-    <p>I sometimes post cover videos and original music on my <a href="https://www.youtube.com/@baren14music">YouTube Channel</a> and also my <a href="https://www.instagram.com/baren_14_tan/">Instagram</a>.</p>
+    <p>I sometimes post cover videos and original music on my <a href="https://www.youtube.com/@baren14music" target="_blank">YouTube Channel</a> and also my <a href="https://www.instagram.com/baren_14_tan/" target="_blank">Instagram</a>.</p>
     <p>Have a listen:</p>
     <table><tr>
     <td><iframe alt="Cover of Bubble Gumby NewJeans" height="200" src="https://www.youtube.com/embed/5t_Bs40pf1s" title="NewJeans - Bubble Gum cover" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></td>
